# gov2-curve-plotter

./: .gitignore  Cargo.toml  README.md
plotter/: Cargo.toml
plotter/data/points/: big_spender Approval ThresholdsSecond.csv  big_spender Support ThresholdsSecond.csv  medium_spender Approval ThresholdsSecond.csv  medium_spender Support ThresholdsSecond.csv  referendum_canceller Approval ThresholdsSecond.csv  (+10 more)
plotter/src/: curve.rs  lib.rs  main.rs  moonbase_tracks.rs
points/: big_spender Approval.csv  big_spender Support Hour.csv  big_spender Support ThresholdsSecond.csv  big_spender Support.csv  medium_spender Approval Hour.csv  medium_spender Approval ThresholdsSecond.csv  medium_spender Approval.csv  medium_spender Support Hour.csv  medium_spender Support.csv  referendum_canceller Approval.csv  referendum_canceller Support Hour.csv  referendum_canceller Support.csv  referendum_killer Approval.csv  referendum_killer Support Hour.csv  referendum_killer Support ThresholdsSecond.csv  referendum_killer Support.csv  root Support Hour.csv  root Support.csv  small_spender Approval Hour.csv  small_spender Approval.csv  small_spender Support Hour.csv  small_spender Support ThresholdsSecond.csv  small_spender Support.csv  treasurer Approval Hour.csv  treasurer Approval.csv  treasurer Support Hour.csv  treasurer Support.csv  whitelisted_caller Approval Hour.csv  whitelisted_caller Approval ThresholdsSecond.csv  whitelisted_caller Approval.csv  whitelisted_caller Support.csv
src/: curve.rs  main.rs
web/: Cargo.toml
web/src/: main.rs
web/static/: darkmode.js
